[project]
name = "a_maze_ing"
version = "0.1.0"
description = "no_description for now"
authors = [
    {name = "None"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.13.3,<3.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
