[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generation and solving library with interactive explorer"
authors = [
    {name = "amamun"},
    {name = "pbishnoi"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.13.3,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.0.0,<3.0.0)"
]
package-mode = true

[tool.poetry]
name = "mazegen"
version = "1.0.0"
description = "A reusable Python library for generating and solving perfect mazes"
authors = [
    "amamun",
    "pbishnoi"
]
packages = [
    { include = "mazegen" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"